--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,15 +3,15 @@
   margin: 0;
   padding: 0;
 }
-body{
+body {
   background-color: white;
 }
 
 form {
-  width: 100%; 
+  width: 100%;
   margin: 0 auto;
   background-color: white;
-  display : flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -19,19 +19,19 @@ form {
   text-align: left;
 }
 
-.form-field{
+.form-field {
   display: flex;
   flex-direction: row;
 }
 
-.left-form-field{
+.left-form-field {
   text-align: left;
   /* border: 1px solid black; */
   padding: 3%;
   margin-right: 20%;
 }
 
-.right-form-field{
+.right-form-field {
   text-align: left;
   /* border : 1px solid black; */
   padding: 2%;
@@ -41,43 +41,44 @@ form {
   text-align: left;
   margin: 4%;
   width: 100%;
- }
-
+}
 
 label {
-  font-size: 18px; /* set the font size for the labels */
-  font-weight: bold; /* make the labels bold */
-  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Open Sans", sans-serif;
 }
 
 input,
 select,
 textarea {
-  width: 130%; /* set the width of the input fields to fill the container */
-  padding: 12px; /* add some padding to the input fields */
-  border-radius: 4px; /* add rounded borders to the input fields */
-  border: 1px solid #ccc; /* add a border to the input fields */
-  box-sizing: border-box; /* include the padding and border in the total width */
-  margin-top: 6px; /* add some space between the label and the input field */
-  margin-bottom: 16px; /* add some space between the input field and the next element */
-  resize: vertical; /* allow the textarea to be resized vertically */
+  width: 130%;
+  padding: 12px;
+  border-radius: 4px;
+  /* border: 1px solid #ccc; */
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
 #impacted-count,
-#occurrence-date{
+#occurrence-date {
   width: 50%;
 }
 
-#create-incident-button{
-
+#create-incident-button {
   height: inherit;
-  background: rgb(47,79,79);
+  background: rgb(47, 79, 79);
   border-radius: 25px;
-  box-shadow: rgb(47,79,79) 0 10px 20px -10px;
+  box-shadow: rgb(47, 79, 79) 0 10px 20px -10px;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
-  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
+    NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
+    EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue",
+    "Noto Sans", sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
@@ -92,15 +93,14 @@ textarea {
   border: 0;
 }
 
-
-.time-field, .form-button{
+.time-field,
+.form-button {
   display: flex;
   flex-direction: row;
 }
 
-.form-button{
-  display : flex;
+.form-button {
+  display: flex;
   align-items: center;
   justify-content: center;
-  
 }
