--- a/assets/css/incident_details.css
+++ b/assets/css/incident_details.css
@@ -1,47 +1,47 @@
 table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-    height: 80%;
-  }
-  
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: center;
-    padding: 8px;
-    height: 30px;
-  }
-  
-  th {
-    background-color: #dddddd;
-  }
-  
-  .left-column{
-    width: 40%;
-    padding-right: 10px;
-  }
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+  height: 80%;
+}
 
-  .table-heading{
-    text-align: center;
-    font-size: large;
-    font-weight: bold;
-  }
- #edit-incident-button{
-  display : flex;
+td,
+th {
+  /* border: 1px solid #dddddd; */
+  text-align: center;
+  padding: 8px;
+  height: 30px;
+}
+
+th {
+  background-color: #dddddd;
+}
+
+.left-column {
+  width: 40%;
+  padding-right: 10px;
+}
+
+.table-heading {
+  text-align: center;
+  font-size: large;
+  font-weight: bold;
+}
+#edit-incident-button {
+  display: flex;
   justify-content: center;
   text-align: center;
-  margin-top : 30px;
+  margin-top: 30px;
   height: 40px;
-  width : 100%;
+  width: 100%;
   /* border : 1px solid black; */
- }
+}
 
- .edit-button{
+.edit-button {
   height: 100%;
-  width : 150%;
-  background: rgb(47,79,79);
+  width: 150%;
+  background: rgb(47, 79, 79);
   border-radius: 25px;
-  box-shadow: rgb(47,79,79) 0 10px 20px -10px;
-  color : white;
-  
- }
+  box-shadow: rgb(47, 79, 79) 0 10px 20px -10px;
+  color: white;
+}
