--- a/assets/css/node_mailer.css
+++ b/assets/css/node_mailer.css
@@ -1,27 +1,25 @@
-#mail_heading{
-    height: 60px;
-    width : 100%;
-    border : 1px solid black;
-    display : flex;
-    justify-content: center;
-    align-content: center;
-  }
-  
-  #mail_heading_text{
-   
-      border : 1px solid black;
-      margin-top: 16px;
-      font-family: 'Open Sans', sans-serif;
-      font-size: 20px; 
-      font-weight: bold;
-      padding-left: 10px;
-      padding-right: 10px;
-      
-  }
-  
-  #mail-body{
-    border : 1px solid red;
-    height: 90vh;
-    width: 100%;
-    margin : 5px;
-  }
+#mail_heading {
+  height: 60px;
+  width: 100%;
+  /* border : 1px solid black; */
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+#mail_heading_text {
+  /* border : 1px solid black; */
+  margin-top: 16px;
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+#mail-body {
+  /* border : 1px solid red; */
+  height: 90vh;
+  width: 100%;
+  margin: 5px;
+}
