--- a/assets/css/partials.css
+++ b/assets/css/partials.css
@@ -1,71 +1,70 @@
 .heading-bar {
-    display: flex; /* use flexbox layout to position the elements */
-    align-items: center; /* center the elements vertically */
-    background-color: rgb(47,79,79); /* set a background color for the heading bar */
-    height: 65px; /* set a fixed height for the heading bar */
-    color: #f2f2f2;
-  }
-  
-  .heading-bar-title {
-    flex: 1; /* take up all available space */
-    text-align: center; /* center the text */
-    font-family: 'Open Sans', sans-serif;
-    font-size: 20px; /* set the font size for the title */
-    font-weight: bold; /* make the title bold */
-    padding-left: 200px; /* add some padding to the title */
-    padding-right: 10px; /* add some padding to the title */
-    
-  }
-  
-  .heading-bar-signout {
-    text-align: right; /* align the sign out button to the right */
-    padding-right: 10px; /* add some padding to the sign out button */
-  }
-  
-  .signout-button {
-    background-color: #ff6347; /* set a background color for the button */
-    color: white; /* set the text color for the button */
-    border: none; /* remove the border */
-    padding: 10px 15px; /* add some padding to the button */
-    cursor: pointer; /* add a cursor on hover */
-    border-radius: 4px; /* rounded border */
-  }
-  
-  .main-div {
-    display: flex; /* use flex layout */
-    flex-direction: row; /* arrange the child elements in a row */
-    height: 100%; /* set the main div to have a 100% height */
-    width : 100%;
+  display: flex;
+  align-items: center;
+  background-color: rgb(47, 79, 79);
+  height: 65px;
+  color: #f2f2f2;
+}
+
+.heading-bar-title {
+  flex: 1;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  padding-left: 200px;
+  padding-right: 10px;
+}
+
+.heading-bar-signout {
+  text-align: right;
+  padding-right: 10px;
+}
+
+.signout-button {
+  background-color: #ff6347;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.main-div {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  width: 100%;
 }
 
 .left-div {
-    width: 20%; /* set the width to 25% */
-    height: 100%; /* set the height to 100% */
-    background-color: #f2f2f2; /* add background color for visualization */
-    border : 1px solid black;
-    display : flex;
-    flex-direction: column;
+  width: 20%;
+  height: 100%;
+  background-color: #f2f2f2;
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
 }
 
 .right-div {
-    width: 70%; /* set the width to 75% */
-    height: 100%; /* set the height to 100% */
-    background-color: #f2f2f2; /* add background color for visualization */
-    /* border : 5px solid red; */
-    margin-left : 15px;
-    margin-top : 5px;
+  width: 70%;
+  height: 100%;
+  background-color: #f2f2f2;
+
+  margin-left: 15px;
+  margin-top: 5px;
 }
 
 .button-style {
-    background-color: rgb(47,79,79); /* Green background color */
-    color: white; /* White text color */
-    padding: 15px 32px; /* Padding for the button */
-    text-align: center; /* Center the text inside the button */
-    text-decoration: none; /* Remove the underline from the text */
-    display: inline-block; /* Display the button as an inline-block element */
-    font-size: 16px; /* Set the font size for the text */
-    margin: 1px; /* Add some margins for spacing */
-    cursor: pointer; /* Add a cursor on hover */
-    border-radius: 4px; /* rounded border */
-    width : 100%;
-  }
+  background-color: rgb(47, 79, 79);
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 1px;
+  cursor: pointer;
+  border-radius: 4px;
+  width: 100%;
+}
