--- a/assets/css/search_by.css
+++ b/assets/css/search_by.css
@@ -1,55 +1,51 @@
-#search-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .multiple-search-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  
-  #search-criteria {
-    margin-bottom: 10px;
-    margin-left : 50px;
-  }
-  
-  #incident-number-input,
-  #name-input,
-  #date-input {
-    margin-bottom: 10px;
-    width: 50%;
-    padding: 12px 20px;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  #search-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-left : 50px;
-  }
-  
-  #searchby-id{
-    margin-left : 40px;
-  }
-  
-  /* ************************************ */
-  
-  
-  
- 
-  /* *********************** */
-  
-  .search-by-input{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  
+#search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.multiple-search-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#search-criteria {
+  margin-bottom: 10px;
+  margin-left: 50px;
+}
+
+#incident-number-input,
+#name-input,
+#date-input {
+  margin-bottom: 10px;
+  width: 50%;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  /* border: 2px solid #ccc; */
+  border-radius: 4px;
+}
+
+#search-button {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 50px;
+}
+
+#searchby-id {
+  margin-left: 40px;
+}
+
+/* ************************************ */
+
+/* *********************** */
+
+.search-by-input {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
